5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4183/executions/1831_1648.log
== TEST (2019-06-13 16:11:32) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: "))
c = 0
for in range(size(v)):
	if (v[i] < size(v)*70//100):
		c = c + 1
vf = zeros(c,dtype=int)
for i in range(size(v)):
	if(v[i] < size(v)*70//100):
		vf[i] + vf[i] + 1
print(c)
print(vf)
-- ERROR:
File "XXXX", line 3
    c = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:12:41) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: "))
d = 0
for in range(size(v)):
	if (v[i] < size(v)*70//100):
		d = d + 1
vf = zeros(d,dtype=int)
for i in range(size(v)):
	if(v[i] < size(v)*70//100):
		vf[i] + vf[i] + 1
print(d)
print(vf)
-- ERROR:
File "XXXX", line 3
    d = 0
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:13:28) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
d = 0
for in range(size(v)):
	if (v[i] < size(v)*70//100):
		d = d + 1
vf = zeros(d,dtype=int)
for i in range(size(v)):
	if(v[i] < size(v)*70//100):
		vf[i] + vf[i] + 1
print(d)
print(vf)
-- ERROR:
File "XXXX", line 4
    for in range(size(v)):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:13:46) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
d = 0
for i in range(size(v)):
	if (v[i] < size(v)*70//100):
		d = d + 1
vf = zeros(d,dtype=int)
for i in range(size(v)):
	if(v[i] < size(v)*70//100):
		vf[i] + vf[i] + 1
print(d)
print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:16:14) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
d = 0
for i in range(size(v)):
	if (v[i] < (size(v)*70)//100):
		d = d + 1
vf = zeros(d,dtype=int)
for i in range(size(v)):
	if(v[i] < (size(v)*70)//100):
		vf[i] = vf[i] + 1
print(d)
print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:17:15) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
d = 0
for i in range(size(v)):
	if (v[i] < (size(v)*70)//100):
		d = d + 1
print(d)
vf = zeros(d,dtype=int)
for i in range(size(v)):
	if(v[i] < (size(v)*70)//100):
		vf[i] = vf[i] + 1
print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:17:55) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
d = 0
for i in range(size(v)):
	if (v[i] < (size(v)*70)//100):
		d = d + 1
	print(d)
vf = zeros(d,dtype=int)
for i in range(size(v)):
	if(v[i] < (size(v)*70)//100):
		vf[i] = vf[i] + 1
	print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:19:10) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
d = 0
for i in range(size(v)):
	if (v[i] < (size(v)*70)//100):
		d = d + 1
		print(d)
vf = zeros(d,dtype=int)
for i in range(size(v)):
	if(v[i] < (size(v)*70)//100):
		vf[i] = vf[i] + 1
		print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:21:05) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
d = 0
for i in range(size(v)):
	if (v[i] < (size(v)*70)//100):
		d = d + 1
print(d)
vf = zeros(d,dtype=int)
for i in range(size(v)):
	if(v[i] < (size(v)*70)//100):
		vf[i] = vf[i] + 1
print(vf)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:26:10) 
-- CODE:
from numpy import *
v = array(eval(input("Digite: ")))
d = 0
for i in range(size(v)):
	if (v[i] < (size(v)*70)//100):
		d = d + 1
print(d)
for i in range(size(v)):
	if(v[i] < (size(v)*70)//100):
		v[i] = v[i] + 1
	else:
		v[i] = v[i] - 1
print(v)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
